--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,10 @@ dependencies {
 
     //spock mock
     testImplementation 'net.bytebuddy:byte-buddy:1.12.21'
+
+    //testcontainers
+    testImplementation 'org.testcontainers:spock:1.17.6'
+    testImplementation 'org.testcontainers:mariadb:1.17.6'
 }
 
 tasks.named('test') {
