[feat] #9 : 프로젝트 변경
추천 대상에 변경사항이 결정되었다.

- 변경사항 : POI(관심장소) -> lottery(복권 판매점)

추천 대상이 변경 됨에 따라 프로젝트 전체적으로 변경사항이 생겼고, 이를 반영한다.

--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ configurations {
 }
 
 bootJar {
-    archiveFileName = 'project-poi.jar'
+    archiveFileName = 'project-lottery.jar'
 }
 
 repositories {
