[feat] #20 : application.yaml - local 환경 설정 추가
해당 설정은 local 개발 환경이므로 `ddl-auto = create` 옵션을 지정해 테이블이 시작 시점에 drop, create 되도록 한다.

또 hibernate 쿼리를 확인하기 편하게 `format` 관련 옵션도 추가했다.

마지막으로 `sql-init-mode = always` 옵션을 추가해 기초 데이틀 세팅하도록 했다.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -36,8 +36,15 @@ spring:
       port: 6379
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: create
     show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+    defer-datasource-initialization: true
+  sql:
+    init:
+      mode: always
 
 ---
 
