--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -13,8 +13,14 @@ spring:
   config:
     activate:
       on-profile: common
+  jpa:
+    properties:
+      hibernate:
+        default_batch_fetch_size: 100
 
 kakao:
+  js:
+    key: ${KAKAO_JAVA_SCRIPT_KEY}
   rest:
     api:
       key: ${KAKAO_REST_API_KEY}
@@ -36,7 +42,7 @@ spring:
       port: 6379
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: validate
     show-sql: true
     properties:
       hibernate:
@@ -44,7 +50,7 @@ spring:
     defer-datasource-initialization: true
   sql:
     init:
-      mode: always
+      mode: never
 
 ---
 
