[feat] #67 : docker-compose-local.yaml 수정
selenium Dockerfile 을 이미지로 build 하고, docker container 를 생성해 사용할 수 있도록 docker-compose.yaml 파일을 수정했다.

우선, 로컬에서 docker 기반의 selenium 이 정상적으로 동작하는지 확인하기 위해 docker-compose-local-yaml 파일만 수정했다.

--- a/docker-compose-local.yaml
+++ b/docker-compose-local.yaml
@@ -22,3 +22,18 @@ services:
       - ./database/init:/docker-entrypoint-initdb.d
     ports:
       - "3306:3306"
+  project-lottery-selenium:
+    container_name: project-lottery-selenium
+    build:
+      dockerfile: Dockerfile
+      context: ./selenium
+    volumes:
+      - /dev/shm:/dev/shm
+    shm_size: 2g
+    environment:
+      - SE_SCREEN_WIDTH=1920
+      - SE_SCREEN_HEIGHT=768
+    ports:
+      - "4444:4444"
+      - "5900:5900"
+      - "7900:7900"
