[feat] #67 : docker-compose-prod.yaml
AWS EC2 실제 prod 환경에서 selenium/stanalone-chrome 컨테이너가 정상적으로 실행 될 수 있도록 docker-compose-prod.yaml 파일을 수정했다.

--- a/docker-compose-prod.yaml
+++ b/docker-compose-prod.yaml
@@ -22,12 +22,28 @@ services:                                                  # 실행하려는 컨
       - ./database/init:/docker-entrypoint-initdb.d
     ports:
       - "3306:3306"
+  project-lottery-selenium:
+    container_name: project-lottery-selenium
+    build:
+      dockerfile: Dockerfile
+      context: ./selenium
+    volumes:
+      - /dev/shm:/dev/shm
+    shm_size: 2g
+    environment:
+      - SE_SCREEN_WIDTH=1920
+      - SE_SCREEN_HEIGHT=768
+    ports:
+      - "4444:4444"
+      - "5900:5900"
+      - "7900:7900"
   project-lottery-app:
     container_name: project-lottery-app
     build: .
     depends_on:                                            # DB, REDIS 컨테이너가 실행된 다음 해당 컨테이너 실행되도록 설정
       - project-lottery-database
       - project-lottery-redis
+      - project-lottery-selenium
     image: pro92/project-lottery-app
     environment:                                           # env 파일에서 환경변수 주입
       - SPRING_PROFILES_ACTIVE=${SPRING_PROFILES_ACTIVE}
@@ -35,6 +51,7 @@ services:                                                  # 실행하려는 컨
       - DATASOURCE_PASSWORD=${DATASOURCE_PASSWORD}
       - KAKAO_REST_API_KEY=${KAKAO_REST_API_KEY}
       - KAKAO_JAVA_SCRIPT_KEY=${KAKAO_JAVA_SCRIPT_KEY}
+      - SELENIUM_HUB_URL=${SELENIUM_HUB_URL}
     ports:
       - "80:8080"
     restart: always                                        # 컨테이너 실행 실패하는 경우 재시작할 수 있도록 설정
