[feat] #69 : docker-compose.yaml 수정
local 개발 환경은 ram 이 충분하기 때문에 `shm_size` 를 수정할 필요가 없다.
prod 환경은 swap 메모리 증설을 했더라도, 3gb 에 불과하기에 `shm_size=256mb` 로 설정을 변경했다.

그리고 이미지 명을 다른 컨테이너와 일치시키기 위해 `pyo92/project-lottery-selenium` 로 지정해줬다.

--- a/docker-compose-local.yaml
+++ b/docker-compose-local.yaml
@@ -27,6 +27,7 @@ services:
     build:
       dockerfile: Dockerfile
       context: ./selenium
+    image: pyo92/project-lottery-selenium
     volumes:
       - /dev/shm:/dev/shm
     shm_size: 2g
