[feat] #99 : application.yaml
동행복권 로그인 정보를 암호화하는 데 사용될 encryption key 를 추가했다.
selenium node 증설로 각각의 url 을 주입받기 위해 추가했다.
local 환경에서는 `ddl-auto` 를 `update` 처리하기로 했다.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -18,6 +18,10 @@ spring:
       hibernate:
         default_batch_fetch_size: 100
 
+dhlottery:
+  encryption:
+      key: ${DH_LOTTERY_ENCRYPTION_KEY}
+
 kakao:
   js:
     key: ${KAKAO_JAVA_SCRIPT_KEY}
@@ -27,7 +31,10 @@ kakao:
 
 selenium:
   hub:
-    url: ${SELENIUM_HUB_URL}
+    scrap:
+      url: ${SELENIUM_HUB_FOR_SCRAP_URL}
+    purchase:
+      url: ${SELENIUM_HUB_FOR_PURCHASE_URL}
 
 ---
 
@@ -46,7 +53,7 @@ spring:
       port: 6379
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: update
     show-sql: true
     properties:
       hibernate:
