--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -17,6 +17,22 @@ spring:
     properties:
       hibernate:
         default_batch_fetch_size: 100
+  security:
+    oauth2:
+      client:
+        registration:
+          kakao:
+            client-id: ${KAKAO_REST_API_KEY}
+            client-secret: ${KAKAO_OAUTH_CLIENT_SECRET}
+            authorization-grant-type: authorization_code
+            redirect-uri: "{baseUrl}/login/oauth2/code/kakao"
+            client-authentication-method: POST
+        provider:
+          kakao:
+            authorization-uri: https://kauth.kakao.com/oauth/authorize
+            token-uri: https://kauth.kakao.com/oauth/token
+            user-info-uri: https://kapi.kakao.com/v2/user/me
+            user-name-attribute: id
 
 dhlottery:
   encryption:
@@ -28,6 +44,10 @@ kakao:
   rest:
     api:
       key: ${KAKAO_REST_API_KEY}
+  oauth:
+    logout:
+      redirection:
+        url: ${KAKAO_OAUTH_LOGOUT_REDIRECTION_URL}
 
 selenium:
   hub:
