[fix] #143 : docker-compose-prod.yaml - 환경변수 추가
kakao oauth authorization 추가로 필요한 환경변수가 늘어났다.
이를 docker-compose-prod.yaml 파일에도 기재하여 외부에서 ".env" 파일을 통해 환경변수를 주입받도록 하는 부분이 누락되어 수정한다.

--- a/docker-compose-prod.yaml
+++ b/docker-compose-prod.yaml
@@ -70,6 +70,7 @@ services:                                                  # 실행하려는 컨
       - DATASOURCE_PASSWORD=${DATASOURCE_PASSWORD}
       - KAKAO_REST_API_KEY=${KAKAO_REST_API_KEY}
       - KAKAO_JAVA_SCRIPT_KEY=${KAKAO_JAVA_SCRIPT_KEY}
+      - KAKAO_OAUTH_LOGOUT_REDIRECTION_URL=${KAKAO_OAUTH_LOGOUT_REDIRECTION_URL}
       - SELENIUM_HUB_FOR_SCRAP_URL=${SELENIUM_HUB_FOR_SCRAP_URL}
       - SELENIUM_HUB_FOR_PURCHASE_URL=${SELENIUM_HUB_FOR_PURCHASE_URL}
       - DH_LOTTERY_ENCRYPTION_KEY=${DH_LOTTERY_ENCRYPTION_KEY}
