--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,7 +2,7 @@ spring:
   profiles:
     active: ${SPRING_PROFILES_ACTIVE}
     group:
-      local:
+      dev:
         - common
       prod:
         - common
@@ -17,6 +17,15 @@ spring:
     properties:
       hibernate:
         default_batch_fetch_size: 100
+  datasource:
+    driver-class-name: org.mariadb.jdbc.Driver
+    url: jdbc:mariadb://${DATASOURCE_URL}:${DATASOURCE_PORT}/${DATASOURCE_SCHEMA}
+    username: ${DATASOURCE_USERNAME}
+    password: ${DATASOURCE_PASSWORD}
+  data:
+    redis:
+      host: ${REDIS_HOST}
+      port: ${REDIS_PORT}
   security:
     oauth2:
       client:
@@ -61,16 +70,7 @@ selenium:
 spring:
   config:
     activate:
-      on-profile: local
-  datasource:
-    driver-class-name: org.mariadb.jdbc.Driver
-    url: jdbc:mariadb://localhost:3306/lottery
-    username: ${LOCAL_DATASOURCE_USERNAME}
-    password: ${LOCAL_DATASOURCE_PASSWORD}
-  data:
-    redis:
-      host: localhost
-      port: 6379
+      on-profile: dev
   jpa:
     hibernate:
       ddl-auto: update
@@ -88,15 +88,6 @@ spring:
   config:
     activate:
       on-profile: prod
-  datasource:
-    driver-class-name: org.mariadb.jdbc.Driver
-    url: jdbc:mariadb://project-lottery-database:3306/lottery
-    username: ${DATASOURCE_USERNAME}
-    password: ${DATASOURCE_PASSWORD}
-  data:
-    redis:
-      host: project-lottery-redis
-      port: 6379
   jpa:
     hibernate:
       ddl-auto: validate
