--- a/docker-compose-prod.yaml
+++ b/docker-compose-prod.yaml
@@ -56,6 +56,8 @@ services:                                                  # 실행하려는 컨
       - DATASOURCE_SCHEMA=${DATASOURCE_SCHEMA}
       - DATASOURCE_USERNAME=${DATASOURCE_USERNAME}
       - DATASOURCE_PASSWORD=${DATASOURCE_PASSWORD}
+      - REDIS_HOST=${REDIS_HOST}
+      - REDIS_PORT=${REDIS_PORT}
       - KAKAO_REST_API_KEY=${KAKAO_REST_API_KEY}
       - KAKAO_JAVA_SCRIPT_KEY=${KAKAO_JAVA_SCRIPT_KEY}
       - KAKAO_OAUTH_LOGOUT_REDIRECTION_URL=${KAKAO_OAUTH_LOGOUT_REDIRECTION_URL}
