--- a/docker-compose-prod.yaml
+++ b/docker-compose-prod.yaml
@@ -67,5 +67,6 @@ services:                                                  # 실행하려는 컨
       - SELENIUM_HUB_FOR_PURCHASE_URL=${SELENIUM_HUB_FOR_PURCHASE_URL}
       - DH_LOTTERY_ENCRYPTION_KEY=${DH_LOTTERY_ENCRYPTION_KEY}
     ports:
-      - "80:8080"
+      - "80:8080"  # HTTP
+      - "443:443"  # HTTPS
     restart: always                                        # 컨테이너 실행 실패하는 경우 재시작할 수 있도록 설정
